--- a/dagster/requirements.txt
+++ b/dagster/requirements.txt
@@ -11,6 +11,7 @@ dagit==0.13.13
 dagster==0.13.13
 dagster-graphql==0.13.13
 defusedxml==0.7.1
+-e git+ssh://git@github.com/kmiku7/learning_something.git@039447467ca21c37042cd34fe1c0d18e1f96c7c3#egg=demo_project&subdirectory=dagster/demo_project
 docstring-parser==0.13
 entrypoints==0.3
 Flask==1.1.4
@@ -30,6 +31,7 @@ grpcio==1.43.0
 grpcio-health-checking==1.43.0
 humanfriendly==10.0
 idna==3.3
+iniconfig==1.1.1
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -43,11 +45,14 @@ nbformat==5.1.3
 packaging==21.3
 pandocfilters==1.5.0
 pendulum==2.1.2
+pluggy==1.0.0
 promise==2.3
 protobuf==3.19.1
+py==1.11.0
 Pygments==2.11.2
 pyparsing==3.0.6
 pyrsistent==0.18.0
+pytest==6.2.5
 python-dateutil==2.8.2
 python-editor==1.0.4
 pytz==2021.3
@@ -59,6 +64,7 @@ six==1.16.0
 SQLAlchemy==1.4.29
 tabulate==0.8.9
 testpath==0.5.0
+toml==0.10.2
 toposort==1.7
 tqdm==4.62.3
 traitlets==5.1.1
